samples/bad6.out
DeclList -> 
Type -> void
Formals -> 
StmtList ->
Type -> int
Variable -> Type identifier
VariableDecl -> Variable ;
Stmt -> VariableDecl
StmtList -> StmtList Stmt
OptReceiver ->
LValue -> OptReceiver identifier
Expr -> LValue
BoolExpr -> Expr
StmtList ->
SimpleStmt ->

*** Error line 5 column 5
    else
    ^^^^
*** parse error

